--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,29 @@
+
 <!DOCTYPE html>
-<html>
+<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
+<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
+<!--[if IE 8]><html class="preIE9"><![endif]-->
+<!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
     <meta charset="UTF-8">
-    <title>Auto-mate, mate...</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>title</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  <link rel="stylesheet" href="style.css" type="text/css">
   </head>
-
-
   <body>
-
-  	<h1> Fucking fuckity fuck yeah!!!!!</h1>
+  
+	<h1> Fucking fuckity fuck yeah!!!!!</h1>
 
 	<br>
 	<br>
 	<br>
 
   	<h1> My baby is working !!!!!</h1>
+
   	<br>
-  
+
+  	<p> Wazzup Danny, yo! You having a good vaction? </p>
+
   </body>
 </html>
