--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
     <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>title</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" href="style.css" type="text/css">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Don't forget to automate, mate</title>
+  	<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  	<link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
+  	<div class="wrapper">
   
 	<h1> Fucking fuckity fuck yeah!!!!!</h1>
 
@@ -24,6 +25,6 @@
   	<br>
 
   	<p> Wazzup Danny, yo! You having a good vaction? </p>
-
+	</div>
   </body>
 </html>
