some content and html

--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,58 @@
   </head>
   <body>
   	<div class="wrapper">
-  
-	<h1> Fucking fuckity fuck yeah!!!!!</h1>
+  		
+  		<div class="logo-large">
+  			<img src="pics/logo.png" />
+  		</div>
+  		<div class="replace navbar"> 
+  			Home | Some Coding X | QA Terminology | Forum | Contact Someone
+  			
+  		</div>
 
-	<br>
-	<br>
-	<br>
+  		<br>
+  		<br>
 
-  	<h1> My baby is working !!!!!</h1>
+  		<div class="replace main">
+  			Some stuff about how cool I am and how you are gonna love the stuff and some other stuff and stuff. Maybe show some simple sample app. Call it Simpson Sampson
 
-  	<br>
+  			<br>
 
-  	<p> Wazzup Danny, yo! You having a good vaction? </p>
+  			<p>
+  				I want this website to help you find a way to become a Software QA Professional. I've been there and I would like to be your guide. 
+
+  				<br><br>
+
+  				Here are some of my <b>Personal Commandments:</b> 
+
+  				<ul class="ool">
+  					<li>Have some disrespect</li>
+  					<li>You can do this if you want</li>
+  					<li>If you want, do this</li>
+  					<li>Don't be afraid to look like a fool, everyone will think it anyway</li>
+  				</ul>
+
+
+  				<ul class="ool">
+  					<li>Prepare to suck at it. For longer than you hoped.</li>
+  					<li>You will get there before you think you could</li>
+  					<li>You don't have to work hard if you like it </li>
+  					<li>Experiment, discover, break, fix, break</li>
+  				</ul>
+
+  			</p>
+
+  		</div>
+
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		
+		<div>
+
+			the bottom of the page
+
+		</div>
+	
 	</div>
+
   </body>
 </html>
