--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
   					<li>Don't be afraid to look like a fool, everyone will think it anyway</li>
   				</ul>
 
+				And here are some of <b>Expectations</b> you might have: 
 
   				<ul class="ool">
   					<li>Prepare to suck at it. For longer than you hoped.</li>
@@ -57,7 +58,7 @@
   		</div>
 
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		
+
 		<div>
 
 			the bottom of the page
