--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,20 @@
 				And here are some of <b>Expectations</b> you might have: 
 
   				<ul class="ool">
-  					<li>Prepare to suck at it. For longer than you hoped.</li>
+  					<li>Prepare to suck at it. For longer than you hoped</li>
   					<li>You will get there before you think you could</li>
   					<li>You don't have to work hard if you like it </li>
   					<li>Experiment, discover, break, fix, break</li>
+  				</ul>
+
+  				Actual stuff that would be good or necessarty to <b>know</b>:
+
+  				<ul class="ool">
+  					<li><b>"Critical Mass of Knowlwdge"</b> and QA terminology</li>
+  					<li><b>SQL and other database stuff</b></li>
+  					<li>Some automation tool like <b>Selenium</b></li>
+  					<li>Domain knowledge</li>
+  					<li>Buzzwords and bells and whistles</li>
   				</ul>
 
   			</p>
