--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="UTF-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Don't forget to automate, mate</title>
+    <title>Your First Steps</title>
   	<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   	<link rel="stylesheet" href="style.css" type="text/css">
   </head>
@@ -17,8 +17,9 @@
   		<div class="logo-large">
   			<img src="pics/logo.png" />
   		</div>
+  		
   		<div class="replace navbar"> 
-  			Home | Some Coding X | QA Terminology | Forum | Contact Someone
+  			Home | Important Stuff | Terminology | Forum | Contact Someone
   			
   		</div>
 
@@ -26,48 +27,37 @@
   		<br>
 
   		<div class="replace main">
-  			Some stuff about how cool I am and how you are gonna love the stuff and some other stuff and stuff. Maybe show some simple sample app. Call it Simpson Sampson
 
+  			I will dedicate this web page to those who are lost and need a place to start. After initial start this page becomes not needed and goes forgotten until there is another completely foreign idea and * don't know where to start
+
+  			<br> 
   			<br>
 
   			<p>
-  				I want this website to help you find a way to become a Software QA Professional. I've been there and I would like to be your guide. 
 
-  				<br><br>
-
-  				Here are some of my <b>Personal Commandments:</b> 
-
-  				<ul class="ool">
-  					<li>Have some disrespect</li>
-  					<li>You can do this if you want</li>
-  					<li>If you want, do this</li>
-  					<li>Don't be afraid to look like a fool, everyone will think it anyway</li>
-  				</ul>
-
-				And here are some of <b>Expectations</b> you might have: 
-
-  				<ul class="ool">
-  					<li>Prepare to suck at it. For longer than you hoped</li>
-  					<li>You will get there before you think you could</li>
-  					<li>You don't have to work hard if you like it </li>
-  					<li>Experiment, discover, break, fix, break</li>
-  				</ul>
-
-  				Actual stuff that would be good or necessarty to <b>know</b>:
-
-  				<ul class="ool">
-  					<li><b>"Critical Mass of Knowlwdge"</b> and QA terminology</li>
-  					<li><b>SQL and other database stuff</b></li>
-  					<li>Some automation tool like <b>Selenium</b></li>
-  					<li>Domain knowledge</li>
-  					<li>Buzzwords and bells and whistles</li>
-  				</ul>
+	  			Sometimes we have to start something and we don't know where. Some things or steps to know to get started. Web dev, qa{sql, selenium, manual}, coding(javascript, sql). Most of the bunches are 10 steps or things. 
 
   			</p>
 
+
+
   		</div>
 
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br>
+			<br>	
+				<br>
+					<br>
+						<br>
+							<br>
+								<br>
+									<br><br>
+								<br>	
+							<br>	
+						<br>
+					<br>
+				<br>
+			<br>
+		<br>
 
 		<div>
 
