--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     <title>Your First Steps</title>
   	<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   	<link rel="stylesheet" href="style.css" type="text/css">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+
   </head>
   <body>
   	<div class="wrapper">
@@ -17,11 +21,31 @@
   		<div class="logo-large">
   			<img src="pics/logo.png" />
   		</div>
-  		
+
   		<div class="replace navbar"> 
   			Home | Important Stuff | Terminology | Forum | Contact Someone
   			
   		</div>
+
+  		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+		
+			<div class="btn-group" role="group">
+	    		<button type="button" class="btn btn-default">Home</button>
+	  		</div>
+	  		<div class="btn-group" role="group">
+	    		<button type="button" class="btn btn-default">Home</button>
+	  		</div>
+	  		<div class="btn-group" role="group">
+	    		<button type="button" class="btn btn-default">Home</button>
+	  		</div>
+	  		<div class="btn-group" role="group">
+	    		<button type="button" class="btn btn-default">Home</button>
+	  		</div>
+	  		<div class="btn-group" role="group">
+	    		<button type="button" class="btn btn-default">Home</button>
+	  		</div>
+			
+		</div>
 
   		<br>
   		<br>
@@ -58,6 +82,8 @@
 				<br>
 			<br>
 		<br>
+
+
 
 		<div>
 
