--- a/public/index.html
+++ b/public/index.html
@@ -30,19 +30,19 @@
   		<div class="btn-group btn-group-justified" role="group" aria-label="...">
 		
 			<div class="btn-group" role="group">
-	    		<button type="button" class="btn btn-default">Home</button>
+	    		<button type="button" class="btn btn-default" id="WebDev">Web Dev</button>
 	  		</div>
-	  		<div class="btn-group" role="group">
-	    		<button type="button" class="btn btn-default">Home</button>
+	  		<div class="btn-group" role="group" id="butt_02">
+	    		<button type="button" class="btn btn-default">Is</button>
 	  		</div>
-	  		<div class="btn-group" role="group">
-	    		<button type="button" class="btn btn-default">Home</button>
+	  		<div class="btn-group" role="group" id="butt_03">
+	    		<button type="button" class="btn btn-default">Sparta-a-a</button>
 	  		</div>
-	  		<div class="btn-group" role="group">
-	    		<button type="button" class="btn btn-default">Home</button>
+	  		<div class="btn-group" role="group" id="butt_04">
+	    		<button type="button" class="btn btn-default">a-aa-a-a-a-a-a-</button>
 	  		</div>
-	  		<div class="btn-group" role="group">
-	    		<button type="button" class="btn btn-default">Home</button>
+	  		<div class="btn-group" role="group" id="butt_05">
+	    		<button type="button" class="btn btn-default">a-a-a-a-a-a-a!!!</button>
 	  		</div>
 			
 		</div>
@@ -52,10 +52,20 @@
 
   		<div class="replace main">
 
-  			I will dedicate this web page to those who are lost and need a place to start. After initial start this page becomes not needed and goes forgotten until there is another completely foreign idea and * don't know where to start
+  			<ul class="tema">
 
-  			<br> 
-  			<br>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>Bootstrap</li>
+				<li>Scripting lang (JavaScript)</li>
+				<li>jQery (or some lib or framework)</li>
+				<li>server (node.js)</li>
+				<li>hosting</li>
+				<li>browser, debugging</li>
+				<li>HTTP, AJAX, async</li>
+				<li>database(SQL, MongoDB)</li>
+
+			</ul>
 
   			<p>
 
@@ -92,6 +102,8 @@
 		</div>
 	
 	</div>
-
+	
+	<script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
+	<script src="js/app.js"></script>
   </body>
 </html>
